# model-car

./: .gitignore
app/: CMakeLists.txt  main.c  prj.conf  system.c  system.h
app/boards/: module_car.overlay
app/interface/: CMakeLists.txt  config.c  config.h  crc.c  interface.h  led.c  led_bar.c  rc.c  uart.c
app/module/: CMakeLists.txt  log.c  log.h  shell.c  shell.h  shell.ld
app/service/: CMakeLists.txt
app/service/button/: service.c  service.h
app/service/shell/: service.c  service.h  shell.c  shell.h  shell_btn.c  shell_btn.h  shell_config.c  shell_config.h  shell_led.c  shell_led.h  shell_led_bar.c  shell_led_bar.h  shell_sys.c  shell_sys.h  shell_thro.c  shell_thro.h
app/service/throttle/: service.c  service.h
gerber/: main_board.kicad_pcb
gerber/Output/: Output.rar  main_board-CPL.csv  main_board1.csv
led_bar_board/: led_bar_board.kicad_pcb  led_bar_board.kicad_prl  led_bar_board.kicad_pro  led_bar_board.kicad_sch  led_bar_board_array.kicad_pcb  led_bar_board_array.kicad_prl  led_bar_board_array.kicad_pro
led_board/: led_board.kicad_pcb  led_board.kicad_pro  led_board.kicad_sch  led_board_array.kicad_pcb  led_board_array.kicad_pro
main_board/: SN32F.kicad_sym  main_board.kicad_pcb  main_board.kicad_pro  main_board.kicad_sch  main_board_array.kicad_pcb  main_board_array.kicad_pro
main_board/main_board/: main_board.kicad_pro  main_board.kicad_sch
tail_board/: tail_board.kicad_pcb  tail_board.kicad_pro  tail_board.kicad_sch  tail_board_array.kicad_pcb  tail_board_array.kicad_pro
tools/: west.yml
tools/scripts/: install.sh  setup.sh
(+6 files in other folders)
